# UndergraduateTermProjectI

./: README.md  main.cpp
Documents/Normaliz/source/minkowski/: CMakeLists.txt  minkowski.cpp
